fdo#46378: Prefer interpolation-based image rescaling in PDF export.

Change-Id: I9ead1221b4562dea0e1ef289944ac11ea850ed1a