vcl/source/gdi/pdfwriter_impl2.cxx
@@ -137,7 +137,7 @@ void PDFWriterImpl::implWriteBitmapEx( const Point& i_rPoint, const Size& i_rSiz
                     aNewBmpSize.Height() = FRound( fMaxPixelX / fBmpWH);
                 }
                 if( aNewBmpSize.Width() && aNewBmpSize.Height() )
-                    aBitmapEx.Scale( aNewBmpSize );
+                    aBitmapEx.Scale( aNewBmpSize, BMP_SCALE_INTERPOLATE );
                 else
                     aBitmapEx.SetEmpty();
             }
